@@ -62,6 +62,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertNull
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|fail
 import|;
 end_import
@@ -98,21 +110,13 @@ end_import
 
 begin_import
 import|import
-name|java
+name|javax
 operator|.
-name|util
+name|servlet
 operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
+name|http
 operator|.
-name|util
-operator|.
-name|Map
+name|HttpServletResponse
 import|;
 end_import
 
@@ -399,16 +403,6 @@ operator|.
 name|junit
 operator|.
 name|Before
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|Ignore
 import|;
 end_import
 
@@ -1636,11 +1630,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-comment|// ignore this testcase, Always gets "too many redirect loops" exception
-comment|// Probably because of the limitation of MiniYARNCluster.
-comment|// Verified the behavior in a single node cluster.
-annotation|@
-name|Ignore
 annotation|@
 name|Test
 DECL|method|testRMWebAppRedirect ()
@@ -1720,231 +1709,182 @@ init|=
 literal|"http://0.0.0.0:28088"
 decl_stmt|;
 name|String
-name|header
+name|redirectURL
 init|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 argument_list|)
 decl_stmt|;
-name|assertTrue
+comment|// if uri is null, RMWebAppFilter will append a slash at the trail of the redirection url
+name|assertEquals
 argument_list|(
-name|header
-operator|.
-name|contains
-argument_list|(
-literal|"; url="
-operator|+
+name|redirectURL
+argument_list|,
 name|rm1Url
-argument_list|)
+operator|+
+literal|"/"
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/metrics"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-name|header
-operator|.
-name|contains
-argument_list|(
-literal|"; url="
-operator|+
+name|redirectURL
+argument_list|,
 name|rm1Url
-argument_list|)
+operator|+
+literal|"/metrics"
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/jmx"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-name|header
-operator|.
-name|contains
-argument_list|(
-literal|"; url="
-operator|+
+name|redirectURL
+argument_list|,
 name|rm1Url
-argument_list|)
+operator|+
+literal|"/jmx"
 argument_list|)
 expr_stmt|;
 comment|// standby RM links /conf, /stacks, /logLevel, /static, /logs,
 comment|// /cluster/cluster as well as webService
 comment|// /ws/v1/cluster/info should not be redirected to active RM
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/cluster/cluster"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/conf"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/stacks"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/logLevel"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/static"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/logs"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/ws/v1/cluster/info"
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/ws/v1/cluster/apps"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-name|header
-operator|.
-name|contains
-argument_list|(
-literal|"; url="
-operator|+
+name|redirectURL
+argument_list|,
 name|rm1Url
-argument_list|)
+operator|+
+literal|"/ws/v1/cluster/apps"
 argument_list|)
 expr_stmt|;
-name|header
+name|redirectURL
 operator|=
-name|getHeader
+name|getRedirectURL
 argument_list|(
-literal|"Refresh"
-argument_list|,
 name|rm2Url
 operator|+
 literal|"/proxy/"
@@ -1952,46 +1892,36 @@ operator|+
 name|fakeAppId
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
-name|header
+name|redirectURL
 argument_list|)
 expr_stmt|;
-comment|// Due to the limitation of MiniYARNCluster and dispatcher is a singleton,
-comment|// we couldn't add the test case after explicitFailover();
 block|}
-DECL|method|getHeader (String field, String url)
+comment|// set up http connection with the given url and get the redirection url from the response
+comment|// return null if the url is not redirected
+DECL|method|getRedirectURL (String url)
 specifier|static
 name|String
-name|getHeader
+name|getRedirectURL
 parameter_list|(
-name|String
-name|field
-parameter_list|,
 name|String
 name|url
 parameter_list|)
 block|{
 name|String
-name|fieldHeader
+name|redirectUrl
 init|=
 literal|null
 decl_stmt|;
 try|try
 block|{
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|map
+name|HttpURLConnection
+name|conn
 init|=
+operator|(
+name|HttpURLConnection
+operator|)
 operator|new
 name|URL
 argument_list|(
@@ -2000,22 +1930,34 @@ argument_list|)
 operator|.
 name|openConnection
 argument_list|()
-operator|.
-name|getHeaderFields
-argument_list|()
 decl_stmt|;
-name|fieldHeader
-operator|=
-name|map
+comment|// do not automatically follow the redirection
+comment|// otherwise we get too many redirections exception
+name|conn
 operator|.
-name|get
+name|setInstanceFollowRedirects
 argument_list|(
-name|field
+literal|false
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|conn
 operator|.
-name|get
+name|getResponseCode
+argument_list|()
+operator|==
+name|HttpServletResponse
+operator|.
+name|SC_TEMPORARY_REDIRECT
+condition|)
+name|redirectUrl
+operator|=
+name|conn
+operator|.
+name|getHeaderField
 argument_list|(
-literal|0
+literal|"Location"
 argument_list|)
 expr_stmt|;
 block|}
@@ -2028,7 +1970,7 @@ block|{
 comment|// throw new RuntimeException(e);
 block|}
 return|return
-name|fieldHeader
+name|redirectUrl
 return|;
 block|}
 block|}
